# ism330dhcx

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  memory.x  rust-toolchain.toml
.cargo/: config
.github/: dependabot.yaml
.github/workflows/: branches.yaml  ci.yaml  main.yaml
examples/: stm32l433.rs
examples/stm32l433/: Cargo.toml  Embed.toml
examples/stm32l433/.cargo/: config.toml
examples/stm32l433/src/: main.rs
src/: ctrl10c.rs  ctrl1xl.rs  ctrl2g.rs  ctrl3c.rs  ctrl7g.rs  ctrl9xl.rs  device.rs  fifo.rs  fifoctrl.rs  fifostatus.rs  lib.rs  sensor.rs
