[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Simple driver for ST ism330dhcx sensor"
documentation = "https://docs.rs/ism330dhcx"
edition = "2021"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]
keywords = [
    "i2c",
    "embedded-hal-driver",
    "ism330dhcx",
    "gyroscope",
    "accelerometer",
]
license = "MIT"
name = "ism330dhcx"
readme = "README.md"
repository = "https://github.com/sousandrei/ism330dhcx"
version = "0.4.0"


[dependencies]
defmt = "0.3.0"
embedded-hal = "0.2.4"

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.4"
panic-semihosting = "0.6.0"

# Waiting for a release inclusing stm32l433 I2C pins
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", features = [
    "rt",
    "stm32l4x3",
] }

[target.'cfg(windows)'.dev-dependencies]
embedded-hal-mock = "0.8.0"

[target.'cfg(unix)'.dev-dependencies]
embedded-hal-mock = "0.8.0"
