[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Simple driver for ST ism330dhcx sensor"
documentation = "https://docs.rs/ism330dhcx"
edition = "2021"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]
keywords = [
    "i2c",
    "embedded-hal-driver",
    "ism330dhcx",
    "gyroscope",
    "accelerometer",
]
license = "MIT"
name = "ism330dhcx"
readme = "README.md"
repository = "https://github.com/sousandrei/ism330dhcx"
version = "0.5.1"


[dependencies]
defmt = "0.3.4"
embedded-hal = "0.2.7"

[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
panic-semihosting = "0.6.0"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l433"] }

[target.'cfg(windows)'.dev-dependencies]
embedded-hal-mock = "0.9.0"

[target.'cfg(unix)'.dev-dependencies]
embedded-hal-mock = "0.9.0"
