[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Simple driver for ST ism330dhcx sensor"
documentation = "https://docs.rs/ism330dhcx"
edition = "2021"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]
keywords = [
    "i2c",
    "embedded-hal-driver",
    "ism330dhcx",
    "gyroscope",
    "accelerometer",
]
license = "MIT"
name = "ism330dhcx"
readme = "README.md"
repository = "https://github.com/sousandrei/ism330dhcx"
version = "0.5.2"


[dependencies]
defmt = "0.3"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"

[dev-dependencies]
approx = "0.5.1"
embedded-hal-mock = "0.11"
